--- a/index.html
+++ b/index.html
@@ -6,16 +6,21 @@
 <body>
 
 	<h1>Press any key to begin playing!</h1>
-	
+	<input type="text" id="guess">
 	<div id="wins">  </div>
 	<br>
 	<br>
-	<div id='blankspaces'> </div>
+	<div id="blanks"></div>
 	</br>
 	</br>
 	<div id="lives"> </div>
 	<br>
+	<div class='input-area'>
+          <input id='letter-input' type='text' maxlength='1'/>
+    </div>
 	<br>
+	<div id = 'Game Over'> </div>
+	<div id = 'youWin!'> </div>
 	<div id="guessed"> </div>
 	<br>
 	<br>
