--- a/index.html
+++ b/index.html
@@ -1,30 +1,51 @@
 <!DOCTYPE html>
 <html lang=en-us>
 <head>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<link rel="stylesheet" type=text/css href="assets/css/style.css">
+	<link rel="stylesheet" type=text/css href="assets/css/reset.css">
+	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
 	<script type="text/javascript" src="assets/javascript/game.js" > </script>
 <body>
+<row>
+	<col-md-12>
+		<div class="jumbotron container-fluid">
+			  <h1 id="hangman">Hangman</h1>
+			  <img src = "assets/images/scienceheader.png" alt="science" id="scienceheader">
+  			<p class= "intro">Welcome to Science Hangman</p>
+ 		 	<p class="intro"> Your word is chosen, start guessing! </p>
+		</div>
+	</col-md-12>
+</row>
 
-	<h1>Press any key to begin playing!</h1>
-	<input type="text" id="guess">
-	<div id="wins">  </div>
-	<br>
-	<br>
-	<div id="blanks"></div>
-	</br>
-	</br>
-	<div id="lives"> </div>
-	<br>
-	<div class='input-area'>
-          <input id='letter-input' type='text' maxlength='1'/>
-    </div>
-	<br>
-	<div id = 'Game Over'> </div>
-	<div id = 'youWin!'> </div>
-	<div id="guessed"> </div>
-	<br>
-	<br>
-	<div id="hint"> </div>
+<div class="container">
+<div class="row">
+	<div class="col-md-6">
+		<div class="well well-lg">
+			<img id='winimage' src='' alt = ''>
+		</div>
+	</div>
+	<div class="col-md-6" id="mainpanel">
+		<div class="well well-lg">
+			<div class="row">
+				<div class="content" id="blanks"></div>
+			</div>
+			<div class="row">
+				<div class = "content" id="guessed"> </div>
+			</div>
+			<div class="row">
+				<div class= "content" id="lives"> </div>
+			</div>
+
+			<div class="row">
+				<div id = 'win' class='winloss'></div>
+				<div id = 'loss' class= 'winloss'></div>
+			</div>
+		</div>
+	</div>
+</div>
+</div>
 
 
 </body>
